<resources>
    <string name="app_name">Counting Multiples</string>
    <string name="retrieve_random_numbers">Retrieve Random Numbers</string>
    <string name="clear_all">Clear All</string>
    <string name="multiples_of_2">Multiples of 2</string>
    <string name="multiples_of_3">Multiples of 3</string>
    <string name="multiples_of_5">Multiples of 5</string>
    <string name="multiples_of_10">Multiples of 10</string>
    <string name="underline">_____</string>
</resources>
